# pygui

./: .gitignore  LICENSE  Makefile  README.md  README.rst  common.py  guicore.py  pyproject.toml  setup.py
example/: main.py
pygui/: __init__.py  colors.py  guicore.py
